Fix edit page horizontal scrolling

--- a/maasaic/assets/sass/_variables.sass
+++ b/maasaic/assets/sass/_variables.sass
@@ -108,7 +108,7 @@ $sidebar-dropdown-border-color: $sidebar-light-color-2
 $sidebar-dropdown-item-name-color: $sidebar-base-color
 $sidebar-dropdown-item-name-hover-color: $primary-color
 $sidebar-dropdown-item-desc-color: $sidebar-light-color
-$sidebar-dropdown-item-url-hover-color: darken($primary-color, 25%)
+$sidebar-dropdown-item-desc-hover-color: $primary-color
 
 
 // Loading
